--- a/configure.ac
+++ b/configure.ac
@@ -4765,3 +4765,5 @@ echo "
 if test x$with_static_mono = xno -a "x$host_win32" != "xyes"; then
    AC_MSG_WARN(Turning off static Mono is a risk, you might run into unexpected bugs)
 fi
+
+am_conditionals="HOST_WIN32 TARGET_WIN32 PLATFORM_LINUX PLATFORM_DARWIN PLATFORM_SIGPOSIX PLATFORM_ANDROID CROSS_COMPILING USE_BATCH_FILES HAVE_ZLIB NINJA DISABLE_LIBRARIES STATIC_MONO SHARED_MONO INSTALL_4_x INSTALL_MONODROID INSTALL_MONOTOUCH INSTALL_MONOTOUCH_WATCH INSTALL_MONOTOUCH_TV BITCODE INSTALL_XAMMAC INSTALL_TESTING_AOT_HYBRID INSTALL_TESTING_AOT_FULL INSTALL_WINAOT INSTALL_ORBIS INSTALL_UNREAL FULL_AOT_TESTS HYBRID_AOT_TESTS DISABLE_PROFILER DISABLE_JIT DISABLE_EXECUTABLES HAS_EXTENSION_MODULE SUPPORT_BOEHM SUPPORT_NULLGC ENABLE_DTRACE DTRACE_G_REQUIRED ENABLE_LLVM LOADED_LLVM ENABLE_LLVM_RUNTIME HAVE_VTUNE TARGET_OSX ENABLE_INTERPRETER SUPPORT_SGEN NEED_VASPRINTF ENABLE_COOP BTLS BTLS_ANDROIDBUILD_MCS MIPS_GCC MIPS_SGI SPARC SPARC64 X86 AMD64 MIPS POWERPC POWERPC64 ARM ARM64 S390X HOST_X86 HOST_AMD64 HOST_ARM HOST_ARM64 CROSS_COMPILE"
