--- a/mono/mini/CMakeLists.txt
+++ b/mono/mini/CMakeLists.txt
@@ -1,53 +1,65 @@
 project (mini)
 
+function (addprefix var prefix list)
+    foreach (i ${list})
+        set (f ${f} ${prefix}/${i})
+    endforeach ()
+    set (${var} ${f} PARENT_SCOPE)
+endfunction()
+
 include_directories(
 	${PROJECT_BINARY_DIR}/../..
 	${PROJECT_SOURCE_DIR}/../
 	${PROJECT_SOURCE_DIR}/../eglib)
 
-set (WIN32_SOURCES ../metadata/console-win32.c
-	../metadata/console-win32-internals.h
-	../metadata/cominterop-win32-internals.h
-	../metadata/w32file-win32.c
-	../metadata/w32file-win32-internals.h
-	../metadata/icall-windows.c
-	../metadata/icall-windows-internals.h
-	../metadata/marshal-windows.c
-	../metadata/marshal-windows-internals.h
-	../metadata/mono-security-windows.c
-	../metadata/mono-security-windows-internals.h
-	../metadata/w32mutex-win32.c
-	../metadata/w32semaphore-win32.c
-	../metadata/w32event-win32.c
-	../metadata/w32process-win32.c
-	../metadata/w32process-win32-internals.h
-	../metadata/w32socket-win32.c
-	../metadata/w32error-win32.c)
+set (METADATA_WIN32_SOURCES_BASE
+	console-win32.c
+	console-win32-internals.h
+	cominterop-win32-internals.h
+	w32file-win32.c
+	w32file-win32-internals.h
+	icall-windows.c
+	icall-windows-internals.h
+	marshal-windows.c
+	marshal-windows-internals.h
+	mono-security-windows.c
+	mono-security-windows-internals.h
+	w32mutex-win32.c
+	w32semaphore-win32.c
+	w32event-win32.c
+	w32process-win32.c
+	w32process-win32-internals.h
+	w32socket-win32.c
+	w32error-win32.c)
 
-set (UNIX_SOURCES
-	../metadata/console-unix.c
-	../metadata/w32mutex-unix.c
-	../metadata/w32semaphore-unix.c
-	../metadata/w32event-unix.c
-	../metadata/w32process-unix.c
-	../metadata/w32process-unix-internals.h
-	../metadata/w32process-unix-osx.c
-	../metadata/w32process-unix-bsd.c
-	../metadata/w32process-unix-haiku.c
-	../metadata/w32process-unix-default.c
-	../metadata/w32socket-unix.c
-	../metadata/w32file-unix.c
-	../metadata/w32file-unix-glob.c
-	../metadata/w32file-unix-glob.h
-	../metadata/w32error-unix.c)
+set (METADATA_UNIX_SOURCES_BASE
+	console-unix.c
+	w32mutex-unix.c
+	w32semaphore-unix.c
+	w32event-unix.c
+	w32process-unix.c
+	w32process-unix-internals.h
+	w32process-unix-osx.c
+	w32process-unix-bsd.c
+	w32process-unix-haiku.c
+	w32process-unix-default.c
+	w32socket-unix.c
+	w32file-unix.c
+	w32file-unix-glob.c
+	w32file-unix-glob.h
+	w32error-unix.c)
 
 if (HOST_WIN32)
-set (PLATFORM_SOURCES ${WIN32_SOURCES})
+set (METADATA_PLATFORM_SOURCES_BASE ${METADATA_WIN32_SOURCES_BASE})
 else()
-set (PLATFORM_SOURCES ${UNIX_SOURCES})
+set (METADATA_PLATFORM_SOURCES_BASE ${METADATA_UNIX_SOURCES_BASE})
 endif ()
 
-add_library (monosgen ${PLATFORM_SOURCES})
+addprefix (METADATA_PLATFORM_SOURCES ../metadata/ "${METADATA_PLATFORM_SOURCES_BASE}")
+
+# FIXME: Config
+
+add_library (monosgen ${METADATA_PLATFORM_SOURCES})
 #add_library(monosgen "main-sgen.c" "${CMAKE_CURRENT_BINARY_DIR}/buildver-sgen.h")
 
 # FIXME: Use the previous format
