--- a/configure.ac
+++ b/configure.ac
@@ -4725,10 +4725,16 @@ dnl **************
 AC_ARG_ENABLE(cmake, [  --enablle-btls             Enable the CMAKE build system], enable_cmake=$enableval, enable_cmake=no)
 
 if test "x$enable_cmake" = "xyes"; then
-   am_conditionals="HOST_WIN32 TARGET_WIN32 PLATFORM_LINUX PLATFORM_DARWIN PLATFORM_SIGPOSIX PLATFORM_ANDROID CROSS_COMPILING USE_BATCH_FILES HAVE_ZLIB NINJA DISABLE_LIBRARIES STATIC_MONO SHARED_MONO INSTALL_4_x INSTALL_MONODROID INSTALL_MONOTOUCH INSTALL_MONOTOUCH_WATCH INSTALL_MONOTOUCH_TV BITCODE INSTALL_XAMMAC INSTALL_TESTING_AOT_HYBRID INSTALL_TESTING_AOT_FULL INSTALL_WINAOT INSTALL_ORBIS INSTALL_UNREAL FULL_AOT_TESTS HYBRID_AOT_TESTS DISABLE_PROFILER DISABLE_JIT DISABLE_EXECUTABLES HAS_EXTENSION_MODULE SUPPORT_BOEHM SUPPORT_NULLGC ENABLE_DTRACE DTRACE_G_REQUIRED ENABLE_LLVM LOADED_LLVM ENABLE_LLVM_RUNTIME HAVE_VTUNE TARGET_OSX ENABLE_INTERPRETER SUPPORT_SGEN NEED_VASPRINTF ENABLE_COOP BTLS BTLS_ANDROIDBUILD_MCS MIPS_GCC MIPS_SGI SPARC SPARC64 X86 AMD64 MIPS POWERPC POWERPC64 ARM ARM64 S390X HOST_X86 HOST_AMD64 HOST_ARM HOST_ARM64 CROSS_COMPILE"
+   #am_conditionals="HOST_WIN32 TARGET_WIN32 PLATFORM_LINUX PLATFORM_DARWIN PLATFORM_SIGPOSIX PLATFORM_ANDROID CROSS_COMPILING USE_BATCH_FILES HAVE_ZLIB NINJA DISABLE_LIBRARIES STATIC_MONO SHARED_MONO INSTALL_4_x INSTALL_MONODROID INSTALL_MONOTOUCH INSTALL_MONOTOUCH_WATCH INSTALL_MONOTOUCH_TV BITCODE INSTALL_XAMMAC INSTALL_TESTING_AOT_HYBRID INSTALL_TESTING_AOT_FULL INSTALL_WINAOT INSTALL_ORBIS INSTALL_UNREAL FULL_AOT_TESTS HYBRID_AOT_TESTS DISABLE_PROFILER DISABLE_JIT DISABLE_EXECUTABLES HAS_EXTENSION_MODULE SUPPORT_BOEHM SUPPORT_NULLGC ENABLE_DTRACE DTRACE_G_REQUIRED ENABLE_LLVM LOADED_LLVM ENABLE_LLVM_RUNTIME HAVE_VTUNE TARGET_OSX ENABLE_INTERPRETER SUPPORT_SGEN NEED_VASPRINTF ENABLE_COOP BTLS BTLS_ANDROIDBUILD_MCS MIPS_GCC MIPS_SGI SPARC SPARC64 X86 AMD64 MIPS POWERPC POWERPC64 ARM ARM64 S390X HOST_X86 HOST_AMD64 HOST_ARM HOST_ARM64 CROSS_COMPILE"
    CMAKE_ARGS="-G Ninja"
    if test x$ENABLE_LLVM_TRUE = x; then
    	  CMAKE_ARGS="$CMAKE_ARGS -DENABLE_LLVM=1"
+   fi
+   if test x$AMD64_TRUE = x; then
+   	  CMAKE_ARGS="$CMAKE_ARGS -DAMD64=1"
+   fi
+   if test x$PLATFORM_DARWIN_TRUE = x; then
+   	  CMAKE_ARGS="$CMAKE_ARGS -DHOST_DARWIN=1"
    fi
    CPPFLAGS="$CPPFLAGS -DHAVE_CONFIG_H"
    echo Running cmake $CMAKE_ARGS -DCMAKE_C_FLAGS="$CPPFLAGS $CFLAGS $SHARED_CFLAGS $LLVM_CFLAGS" -DLLVM_LIBS="$LLVM_LIBS"
